--- a/Pandas+SQL.ipynb
+++ b/Pandas+SQL.ipynb
@@ -45,8 +45,8 @@
    "outputs": [],
    "source": [
     "# Creating a connecting to database\n",
-    "con = mysql.connector.connect(user='root', password='21rSNSTBTLVTLV',\n",
-    "                             host='localhost', \n",
+    "con = mysql.connector.connect(user='', password='',\n",
+    "                             host='', \n",
     "                             database='employees')"
    ]
   },
